--- a/main.html
+++ b/main.html
@@ -10,6 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<section class="card">
+		<img src="https://images.unsplash.com/photo-1615966650071-855b15f29ad1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y291cGxlJTIwaW4lMjBsb3ZlfGVufDB8fDB8fHww&w=1000&q=80" alt="img">
+		<h1>PricingCard </h1>
+		<p> Price:Rs.200 </p>
+		<p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+		<button class="btn">Buy now</button>
+	</section>
+	
 
 </body>
 
